# BOT_GPT

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  streamlit_ui.py
app/: __init__.py  main.py
app/api/: conversations.py  documents.py  users.py
app/core/: config.py
app/db/: database.py  models.py  schemas.py
app/services/: conversation_service.py  document_service.py  llm_service.py  rag_service.py
app/utils/: chunking.py
tests/: conftest.py  test_conversations.py  test_documents.py
